[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/creditsWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Boardwalk-Arcade-2.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 264
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[node name="mainMenu" type="Node2D"]
script = ExtResource( 1 )
IS_DEBUG = true

[node name="Background" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0.0901961, 0.0823529, 0.0823529, 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 391.0
margin_top = 107.0
margin_right = 1594.0
margin_bottom = 365.0
custom_colors/default_color = Color( 0.352941, 0.886275, 0.0196078, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Buying Light"

[node name="buttonGroup" type="VBoxContainer" parent="."]
margin_left = 692.0
margin_top = 492.0
margin_right = 1292.0
margin_bottom = 992.0
custom_constants/separation = 20

[node name="Play" type="Button" parent="buttonGroup"]
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Options" type="Button" parent="buttonGroup"]
margin_top = 170.0
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Credits" type="Button" parent="buttonGroup"]
margin_top = 340.0
margin_right = 600.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 4 )
text = "Credits"

[node name="Exit" type="Button" parent="."]
margin_left = 13.0
margin_top = 1008.0
margin_right = 163.0
margin_bottom = 1068.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 5 )
text = "Exit"

[node name="CreditsWindow" parent="." instance=ExtResource( 3 )]

[node name="OptionsWindow" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true
bus = "Music"

[node name="LightHolder" type="Node2D" parent="."]

[connection signal="pressed" from="buttonGroup/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="buttonGroup/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="buttonGroup/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="popup_hide" from="CreditsWindow" to="." method="_on_CreditsWindow_popup_hide"]
[connection signal="popup_hide" from="OptionsWindow" to="." method="_on_OptionsWindow_popup_hide"]
